--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <section class="imgCardFront">
+        <img src="./images/bg-card-front.png" alt="">
+        <div class="circle-white"></div>
+        <div class="circle-only"></div>
+    </section>
+    <section class="imgCardBack">
+        <img src="./images/bg-card-back.png" alt="">
+    </section>
     <section>
         <img src="./images/bg-main-desktop.png" alt="">
     </section>
